# deskmate

./: .gitignore  AGENT-LOG.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  STATUS.md  index.html  package-lock.json  package.json  vite.config.ts
dist-installers/: SHA256SUMS.txt
docs/: ARCHITECTURE.md  HA-SETUP.md  LINK.md  PLAN-DESKMATE-V2.md  PLAN-DESKMATE-V3.md  PLAN.md  RELEASE-0.3.1.md  RELEASE-0.4.0.md  ROADMAP.md  SECURITY.md  STREAMDECK-PLAN.md
scripts/: generate_link_vectors.py
src/: App.tsx  api.ts  components.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  clipboard.rs  config.rs  consts.rs  discovery.rs  ha_api.rs  hardware.rs  hotkeys.rs  lib.rs  link.rs  link_files.rs  main.rs  media.rs  mqtt.rs  notify.rs  security.rs  sensors.rs  state.rs  sys_commands.rs  transport.rs  tts.rs
src-tauri/tests/fixtures/: deskmate_link_v1.json
src/pages/: ActionEditor.tsx  CommandsPage.tsx  HotkeysPage.tsx  NotificationsPage.tsx  SensorsPage.tsx  SettingsPage.tsx  StatusPage.tsx  WidgetPanel.tsx  WidgetsPage.tsx  Wizard.tsx
streamdeck-plugin/: .gitignore  README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
streamdeck-plugin/com.homeos.homeassistant.sdPlugin/: manifest.json
streamdeck-plugin/com.homeos.homeassistant.sdPlugin/ui/: activate-scene.html  call-service.html  toggle-entity.html
streamdeck-plugin/scripts/: generate-icons.mjs
streamdeck-plugin/src/: ha-client.ts  plugin.ts
streamdeck-plugin/src/actions/: activate-scene.ts  call-service.ts  toggle-entity.ts
